# plant_disease_detection

./: .gitignore  README.md  pyproject.toml  requirements.txt  training_hist.json
app/: main.py
data/: data.txt
notebooks/: plant_disease_detection.ipynb
