[project]
name = "plant-disease-detection"
version = "0.1.0"
description = "plant_disease_detection system for identify the plant diseases"
authors = [
    {name = "Praneeth Anjana"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit (>=1.47.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
